Templates refactored & routes updated

--- a/templates/contact.page.tmpl
+++ b/templates/contact.page.tmpl
@@ -3,8 +3,8 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>This is the About page.</h1>
-                <p>INSERT DETAILS ABOUT THE B&B</p>
+                <h1>This is the Contact page.</h1>
+                <p>CONTACT DETAILS AND FORM HERE</p>
             </div>
         </div>
     </div>
