--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -1,23 +1,270 @@
 {{define "base"}}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link href=" https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css " rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Reservation</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.3/dist/css/datepicker.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/notie/dist/notie.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css" />
 
-        {{block "css" .}}
-        {{end}}
+    {{ block "css" . }}
+    {{end}}
+  </head>
 
-    </head>
-    <body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Rooms
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a
+                class="dropdown-item"
+                href="/generals-quarters"
+                >General's Quarters</a
+              >
+              <a class="dropdown-item" href="/colonels-suite"
+                >Colonel's Suite</a
+              >
+            </div>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="/search-availability"
+              tabindex="-1"
+              aria-disabled="true"
+              >Search Availability</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="/contact"
+              tabindex="-1"
+              aria-disabled="true"
+              >Contact</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+        </ul>
+        <!-- <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form> -->
+      </div>
+    </nav>
         {{block "content" .}}
         {{end}}
 
-        {{block "js" .}}
-        {{end}}
-    </body>
-    </html>
+        
+        <div class="row my-footer text-light bg-dark mt-4">
+            <div class="col">Left</div>
+            <div class="col">Middle</div>
+            <div class="col">Right</div>
+          </div>
+      
+          <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+              integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+              crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+              integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+              crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/js/datepicker-full.min.js"></script>
+      <script src="https://unpkg.com/notie"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      
+      {{block "js" .}}
+      {{end}}
+
+          <script>
+            let attention = Prompt();
+        
+            (function () {
+                'use strict';
+                window.addEventListener('load', function () {
+                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                    let forms = document.getElementsByClassName('needs-validation');
+                    // Loop over them and prevent submission
+                    Array.prototype.filter.call(forms, function (form) {
+                        form.addEventListener('submit', function (event) {
+                            if (form.checkValidity() === false) {
+                                event.preventDefault();
+                                event.stopPropagation();
+                            }
+                            form.classList.add('was-validated');
+                        }, false);
+                    });
+                }, false);
+            })();
+        
+            function notify(msg, msgType) {
+                notie.alert({
+                    type: msgType,
+                    text: msg,
+                })
+            }
+        
+            function notifyModal(title, text, icon, confirmationButtonText) {
+                Swal.fire({
+                    title: title,
+                    html: text,
+                    icon: icon,
+                    confirmButtonText: confirmationButtonText
+                })
+            }
+        
+            function Prompt() {
+                let toast = function (c) {
+                    const{
+                        msg = '',
+                        icon = 'success',
+                        position = 'top-end',
+        
+                    } = c;
+        
+                    const Toast = Swal.mixin({
+                        toast: true,
+                        title: msg,
+                        position: position,
+                        icon: icon,
+                        showConfirmButton: false,
+                        timer: 3000,
+                        timerProgressBar: true,
+                        didOpen: (toast) => {
+                            toast.addEventListener('mouseenter', Swal.stopTimer)
+                            toast.addEventListener('mouseleave', Swal.resumeTimer)
+                        }
+                    })
+        
+                    Toast.fire({})
+                }
+        
+                let success = function (c) {
+                    const {
+                        msg = "",
+                        title = "",
+                        footer = "",
+                    } = c
+        
+                    Swal.fire({
+                        icon: 'success',
+                        title: title,
+                        text: msg,
+                        footer: footer,
+                    })
+        
+                }
+        
+                let error = function (c) {
+                    const {
+                        msg = "",
+                        title = "",
+                        footer = "",
+                    } = c
+        
+                    Swal.fire({
+                        icon: 'error',
+                        title: title,
+                        text: msg,
+                        footer: footer,
+                    })
+        
+                }
+        
+                async function custom(c) {
+                    const {
+                        msg = "",
+                        title = "",
+                    } = c;
+        
+                    const { value: formValues } = await Swal.fire({
+                        title: title,
+                        html: msg,
+                        backdrop: false,
+                        focusConfirm: false,
+                        showCancelButton: true,
+                        willOpen: () => {
+                            const elem = document.getElementById("reservation-dates-modal");
+                            const rp = new DateRangePicker(elem, {
+                                format: 'yyyy-mm-dd',
+                                showOnFocus: true,
+                            })
+                        },
+                        didOpen: () => {
+                            document.getElementById("start").removeAttribute("disabled");
+                            document.getElementById("end").removeAttribute("disabled");
+                        },
+                        preConfirm: () => {
+                            return [
+                                document.getElementById('start').value,
+                                document.getElementById('end').value
+                            ]
+                        }
+                    })
+        
+                    if (formValues) {
+                        Swal.fire(JSON.stringify(formValues))
+                    }
+                }
+        
+                return {
+                    toast: toast,
+                    success: success,
+                    error: error,
+                    custom: custom,
+                }
+            }
+        
+        </script>
+      
+        </body>
+      </html>
+
 {{end}}
