--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -1,13 +1,83 @@
 {{template "base" .}}
 
 {{ define "content" }}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>This is the Home page.</h1>
-                <p>This is some text.</p>
-                <p>Updating without re-running the program.</p>
-            </div>
+<div
+      id="carouselExampleCaptions"
+      class="carousel slide carousel-fade"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleCaptions"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="/static/images/outside.png"
+            class="d-block w-100 h-25"
+            alt="The outside view of our B&B"
+          />
         </div>
+        <div class="carousel-item">
+          <img
+            src="/static/images/tray.png"
+            class="d-block w-100 h-25"
+            alt="A breakfast tray featuring coffee, chocolates and a cookie."
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="/static/images/woman-laptop.png"
+            class="d-block w-100 h-25"
+            alt="A woman working on a laptop and enjoying our coffee from her room."
+          />
+        </div>
+      </div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleCaptions"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleCaptions"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+            <h1 class="text-center mt-4">Welcome to Fort Smythe Bed & Breakfast</h1>
+            <p>Your home away from home, set on the majestic waters of the Atlantic Ocean. This will be a vacation to remember.
+                Your home away from home, set on the majestic waters of the Atlantic Ocean. This will be a vacation to remember.
+                Your home away from home, set on the majestic waters of the Atlantic Ocean. This will be a vacation to remember.
+                Your home away from home, set on the majestic waters of the Atlantic Ocean. This will be a vacation to remember.
+                Your home away from home, set on the majestic waters of the Atlantic Ocean. This will be a vacation to remember.
+                Your home away from home, set on the majestic waters of the Atlantic Ocean. This will be a vacation to remember.
+                Your home away from home, set on the majestic waters of the Atlantic Ocean. This will be a vacation to remember.
+            </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col text-center">
+            <a href="/search-availability" class="btn btn-success">Make Reservation Now</a>
+        </div>
+      </div>
+
     </div>
 {{ end }}
